# hhc

./: .gitignore  CHANGELOG.md  README.md  cabal.project.local  flake.nix  hhc.cabal  tags
.github/workflows/: haskell.yml
app/: Main.hs
docs/: typeclass.md
llvm-tf-16.0/: Changes.md  llvm-tf.cabal
llvm-tf-16.0/example/: Arith.hs  Array.hs  List.hs  Vector.hs
llvm-tf-16.0/private/LLVM/Core/: CodeGen.hs  Instructions.hs  Type.hs  UnaryVector.hs  Util.hs  Vector.hs
llvm-tf-16.0/private/LLVM/Core/Instructions/: Guided.hs  Private.hs
llvm-tf-16.0/src/LLVM/Util/: Arithmetic.hs  Memory.hs
llvm-tf-16.0/test/Test/: Marshal.hs
src/HHC/: Eval.hs  Rename.hs  Repl.hs  Syntax.hs  Types.hs
src/HHC/CodeGen/LLVM/: Test.hs
src/HHC/Core/: Optimizer.hs  Pretty.hs  Syntax.hs  Tc.hs  Test.hs
src/HHC/Parser/: Lexer.hs  Parser.hs
src/HHC/Parsing/: Lexer.hs  Parser.hs
src/HHC/TypeCheck/: Elaboration.hs  Env.hs  Error.hs  Infer.hs  Subst.hs  typeclass.md
src/HHC/Utils/: Outputable.hs  Pretty.hs
test/: Spec.hs
