cabal-version:      3.14
name:               hhc
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             hank
maintainer:         hnkhgn@icloud.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      HHC.Syntax
      HHC.Types

      HHC.Parser.Parser
      HHC.Parser.Lexer

      HHC.Rename

      HHC.TypeCheck.Env
      HHC.TypeCheck.Error
      HHC.TypeCheck.Subst

      HHC.Core.Syntax
      HHC.Core.Optimizer

      HHC.Eval

      HHC.Utils.Outputable

    -- other-modules:
    -- other-extensions:
    build-depends:    
      , base ^>=4.21.0.0
      , effectful
      , lens
      , repline
      , parsec
      , text

    hs-source-dirs:   src
    default-language: GHC2024

executable hhc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        hhc

    hs-source-dirs:   app
    default-language: GHC2024
