cabal-version:      3.14
name:               hhc
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             hank
maintainer:         hnkhgn@icloud.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      HHC.Syntax
      HHC.Types

      HHC.Parsing.Parser
      HHC.Parsing.Lexer

      HHC.Rename

      HHC.TypeCheck.Env
      HHC.TypeCheck.Error
      HHC.TypeCheck.Subst
      HHC.TypeCheck.Infer
      HHC.TypeCheck.Elaboration

      HHC.Core.Syntax
      HHC.Core.Tc
      HHC.Core.Optimizer

      HHC.Eval

      HHC.Repl

      HHC.Utils.Outputable
      HHC.Utils.Pretty

    -- other-modules:
    -- other-extensions:
    build-depends:    
      , base ^>=4.21.0.0
      , effectful
      , lens
      , repline
      , parsec
      , text
      , containers
      , pretty
      , mtl

    hs-source-dirs:   src
    default-language: GHC2024

executable hhc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        hhc

    hs-source-dirs:   app
    default-language: GHC2024

test-suite hhc-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
      , base ^>=4.21.0.0
      , hhc
      , tasty
      , tasty-hunit
      , containers
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2024
